--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint --fix --ext .ts,.tsx ."
   },
   "dependencies": {
+    "framer-motion": "^11.0.22",
     "next": "14.1.4",
     "react": "^18",
     "react-dom": "^18"
