--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "framer-motion": "^11.0.22",
+    "ky": "^1.2.3",
     "next": "14.1.4",
     "next-themes": "^0.3.0",
     "react": "^18",
@@ -28,6 +29,7 @@
     "react-hook-form": "^7.51.2",
     "react-icons": "^5.0.1",
     "react-syntax-highlighter": "^15.5.0",
+    "sonner": "^1.4.41",
     "tailwind-merge": "^2.2.2",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^0.9.0",
