--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "ky": "^1.2.3",
     "next": "14.1.4",
     "next-themes": "^0.3.0",
+    "nodemailer": "^6.9.13",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.51.2",
@@ -39,6 +40,7 @@
     "@rocketseat/eslint-config": "^2.2.2",
     "@testing-library/react": "^14.2.2",
     "@types/node": "^20",
+    "@types/nodemailer": "^6.4.14",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@types/react-syntax-highlighter": "^15.5.11",
