feat: add next auth with github provider

--- a/.env.example
+++ b/.env.example
@@ -7,4 +7,14 @@ TURNSTILE_SECRET=
 NEXT_PUBLIC_EMAIL=
 EMAIL_PASSWORD=
 
+# Application URL itself (to work with next.js api routes [route call another route])
 NEXT_PUBLIC_API_URL=
+
+# Db config
+DATABASE_URL=
+
+# OAuth keys
+GITHUB_ID=
+GITHUB_SECRET=
+NEXTAUTH_URL=
+NEXTAUTH_SECRET=
