--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-icons": "^5.0.1",
     "react-syntax-highlighter": "^15.5.0",
     "sonner": "^1.4.41",
+    "swr": "^2.2.5",
     "tailwind-merge": "^2.2.2",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^0.9.0",
