--- a/package.json
+++ b/package.json
@@ -33,13 +33,13 @@
     "next-mdx-remote": "^4.4.1",
     "next-themes": "^0.3.0",
     "nodemailer": "^6.9.13",
-    "plaiceholder": "^3.0.0",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.51.2",
     "react-icons": "^5.0.1",
     "react-syntax-highlighter": "^15.5.0",
     "remark-gfm": "^3.0.1",
+    "sharp": "^0.33.3",
     "sonner": "^1.4.41",
     "swr": "^2.2.5",
     "tailwind-merge": "^2.2.2",
